# hybird-rag-law-QA

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  EVAL_REPORT.md  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
data/sample/: 勞動基準法施行細則.json  勞工請假規則.json
eval/: _bootstrap.py  ablation.py  judge.py  lib.py  run_e2e_eval.py  run_retrieval_eval.py
eval/dataset/: README.md  eval_set.jsonl  mini_eval.jsonl
scripts/: _bootstrap.py  ask.py  build_index.py  download_corpus.py  run_api.py
src/rag/: config.py  factory.py  models.py
src/rag/api/: main.py
src/rag/generation/: answerer.py  llm.py  prompts.py
src/rag/indexing/: bm25_index.py  embedder.py  tokenizer.py  vector_store.py
src/rag/indexing/dict/: legal_terms.txt
src/rag/ingestion/: chunkers.py  cleaner.py  loader.py
src/rag/retrieval/: fusion.py  pipeline.py  reranker.py  retriever.py
tests/: test_answerer.py  test_bm25_index.py  test_chunkers.py  test_cleaner.py  test_config.py  test_embedding_cache.py  test_eval_dataset.py  test_fusion.py  test_judge.py  test_llm.py  test_loader.py  test_pipeline.py  test_retriever.py  test_tokenizer.py
ui/: app.py
